<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <LinearLayout
                android:id="@+id/ll_edit_actions"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/layout_padding_64dp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:padding="@dimen/layout_padding_16dp"
                        android:text="@string/profile_photo"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorSecondaryText"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/layout_padding_16dp"
                            android:paddingLeft="@dimen/layout_padding_16dp"
                            android:paddingRight="@dimen/layout_padding_16dp">

                            <LinearLayout
                                android:id="@+id/ll_gallery"
                                android:layout_height="match_parent"
                                android:layout_width="wrap_content"
                                android:orientation="vertical"
                                android:clickable="true"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:padding="@dimen/layout_padding_24dp">

                                <ImageView
                                    android:id="@+id/iv_gallery"
                                    android:layout_height="@dimen/layout_padding_50dp"
                                    android:layout_width="@dimen/layout_padding_50dp"
                                    android:layout_gravity="center"
                                    app:srcCompat="@drawable/attach_gallery"
                                    android:contentDescription="@string/gallery"/>


                                <TextView
                                    android:id="@+id/tv_gallery"
                                    android:layout_gravity="center"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:paddingTop="@dimen/layout_padding_8dp"
                                    android:text="@string/gallery"
                                    android:textColor="@color/colorPrimaryText"
                                    android:textSize="12sp"/>

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/ll_camera"
                                android:layout_height="match_parent"
                                android:layout_width="wrap_content"
                                android:orientation="vertical"
                                android:clickable="true"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:padding="@dimen/layout_padding_24dp">

                                <ImageView
                                    android:id="@+id/iv_camera"
                                    android:layout_height="@dimen/layout_padding_50dp"
                                    android:layout_width="@dimen/layout_padding_50dp"
                                    android:layout_gravity="center"
                                    android:contentDescription="@string/camera"
                                    app:srcCompat="@drawable/attach_camera" />

                                <TextView
                                    android:id="@+id/tv_camera"
                                    android:layout_gravity="center"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:paddingTop="@dimen/layout_padding_8dp"
                                    android:text="@string/camera"
                                    android:textColor="@color/colorPrimaryText"
                                    android:textSize="12sp" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_remove_photo"
                            android:layout_height="match_parent"
                            android:layout_width="wrap_content"
                            android:orientation="vertical"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="@dimen/layout_padding_24dp">

                            <ImageView
                                android:id="@+id/iv_delete"
                                android:layout_height="@dimen/layout_padding_50dp"
                                android:layout_width="@dimen/layout_padding_50dp"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/clear"
                                android:contentDescription="@string/remove_photo"/>

                            <TextView
                                android:id="@+id/tv_delete"
                                android:layout_gravity="center"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:paddingTop="@dimen/layout_padding_8dp"
                                android:text="@string/remove_photo"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="12sp"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_edit_action_form"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding_24dp"
                android:visibility="gone">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:id="@+id/tv_header"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingBottom="@dimen/layout_padding_16dp"
                    android:textStyle="bold"
                    tools:text="Camera"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_picture"
                    android:layout_width="220dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorPrimary"
                    app:srcCompat="@drawable/cheese_4"/>

                <TextView
                    android:id="@+id/tv_select_file"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/layout_padding_4dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/edit_selected_file"/>

                <TextView
                    android:id="@+id/tv_image_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/no_file_selected_yet"
                    android:layout_marginBottom="@dimen/layout_padding_16dp"/>

                <Button
                    android:drawableLeft="@drawable/ic_attach_file_black_24dp"
                    android:drawableStart="@drawable/ic_attach_file_black_24dp"
                    android:id="@+id/btn_choose_select_photo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:drawablePadding="@dimen/layout_padding_8dp"
                    android:gravity="start|center"
                    android:layout_gravity="center"
                    android:theme="@style/AppTheme.Normal.Button"
                    tools:text="Choose a file (max size 512 KB)"
                    android:textAllCaps="false"/>

                <TextView
                    android:id="@+id/tv_image_size"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/light_red"
                    android:text="@string/portrait_size_can_not_exceed"
                    android:layout_marginTop="@dimen/layout_padding_8dp"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/layout_padding_8dp"/>

                <LinearLayout
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/layout_padding_8dp"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/layout_padding_16dp"
                        android:layout_marginRight="@dimen/layout_padding_16dp"
                        android:layout_weight=".5"
                        android:layout_width="wrap_content"
                        android:text="@string/cancel"
                        android:theme="@style/AppTheme"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/btn_upload_photo"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:layout_width="wrap_content"
                        android:text="@string/upload"
                        android:theme="@style/AppTheme"
                        android:textAllCaps="false"
                    />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>



